# flowsheet-inspector-lib

./: .coveragerc  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pytest.yml
docs/: api.ipynb  api.md  conf.py  index.md  myst.yml  run.bat  run.sh  usage.md
src/idaes_fi/: __init__.py
src/idaes_fi/structfs/: __init__.py  action_base.py  common.py  fsrunner.py  logutil.py  reportdb.py  runner.py  runner_actions.py  simple_wrap.py
src/idaes_fi/structfs/actions/: model_report.py
src/idaes_fi/structfs/tests/: demo_flowsheet_structured_multi.py  flash_flowsheet.py  flash_main.py  hda_flowsheet.py  model_from_template.py  model_template.py  test_common.py  test_fsrunner.py  test_reportdb.py  test_runner.py  test_runner_actions.py  test_simple_wrap.py  test_structfs.py
src/idaes_fi/structfs/tool/: db_tools.py
src/idaes_fi/tests/: test_import.py
