[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idaes-fi"
version = "0.1.0"
description = "Library modules and API for the IDAES Flowsheet Inspector user interface."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
  { name = "PrOMMiS contributors" },
]
keywords = ["idaes", "flowsheet", "process-modeling"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "idaes-pse @ git+https://github.com/IDAES/idaes-pse@main",
    "pyomo >=6.9.5",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "mystmd>=1.8.3",
  "pytest>=8",
  "black>=26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
idaes_fi = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: marks tests as unit tests",
  "component: marks tests as component tests",
  "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "src"
strict = true
warn_unused_configs = true
show_error_codes = true
