[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idaes-fi"
version = "0.1.0"
description = "Library modules and API for the IDAES Flowsheet Inspector user interface."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
  { name = "PrOMMiS contributors" },
]
keywords = ["idaes", "flowsheet", "process-modeling"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
    "idaes-pse @ git+https://github.com/IDAES/idaes-pse@main",
    "pyomo >=6.9.5",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "sphinx>=9",
  "jupyter-book>=2.0.0",

  "sphinx-autodoc2>=0.5",
  "sphinxcontrib-napoleon>=0.5.0",
  "sphinx-argparse==0.5.2",
  "sphinx-book-theme<=1.1.2,>=1.0.0",
  "sphinx-copybutton==0.5.2",
  "nbsphinx",  # for Jupyter Notebooks in the docs

  "pytest>=8",
  "pytest-cov",
  "black>=26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
fi-copy = "idaes_fi.scripts.copy_template:main"
fi-run = "idaes_fi.structfs.fsrunner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
idaes_fi = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]
markers = [
  "unit: marks tests as unit tests",
  "component: marks tests as component tests",
  "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "src"
strict = true
warn_unused_configs = true
show_error_codes = true
